<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


       <item android:title="@string/menu_item_account_text">
              <menu>
                     <group android:checkableBehavior="single" >
                            <item
                                android:id="@+id/profileFragment"
                                android:title="@string/menu_item_profile_title"
                                android:icon="@drawable/ic_profile"/>
                            <item
                                android:id="@+id/chatsFragment"
                                android:title="@string/menu_item_messages_title"
                                android:icon="@drawable/ic_messages" />

                            <item
                                android:id="@+id/notificationsFragment"
                                android:title="@string/menu_item_notifications_title"
                                android:icon="@drawable/ic_notifications"/>

                            <item
                                android:id="@+id/settingsFragment"
                                android:title="@string/menu_item_settings_title"
                                android:icon="@drawable/ic_settings" />

                            <item
                                android:id="@+id/logOutTextView"
                                android:onClick="logOut"
                                android:title="@string/menu_item_logout_title"
                                android:icon="@drawable/ic_logout" />
                     </group>
              </menu>
       </item>

       <item android:title="@string/policy_support_text">
              <menu>
                     <group android:checkableBehavior="single">
                            <item
                                android:id="@+id/policyFragment"
                                android:title="@string/menu_item_policy_text"
                                android:icon="@drawable/ic_policy" />
                     </group>
              </menu>
       </item>

</menu>