<?xml version="1.0" encoding="utf-8"?>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userPhotoImageView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_8dp"
            android:background="@color/grey"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.School_ShapeableImageView" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:text="@string/name_placeholder"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/timeStampTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/userPhotoImageView"
            app:layout_constraintTop_toTopOf="@+id/userPhotoImageView" />

        <TextView
            android:id="@+id/schoolTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/school_name_placeholder"
            app:layout_constraintEnd_toStartOf="@+id/locationTextView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nameTextView"
            app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/timeStampTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:lines="1"
            android:text="@string/time_stamp_placeholder"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/nameTextView" />

        <TextView
            android:id="@+id/locationTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/padding_4dp"
            android:text="@string/location_place_holder"
            android:textSize="@dimen/text_size_12sp"
            android:layout_marginTop="@dimen/margin_2dp"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableTint="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/timeStampTextView"
            app:layout_constraintTop_toBottomOf="@+id/timeStampTextView" />

        <TextView
            android:id="@+id/contentTextView"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_15sp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/context_text_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userPhotoImageView" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/contentImageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:src="@drawable/ic_launcher_foreground"
            app:layout_constraintTop_toBottomOf="@+id/contentTextView"
            tools:layout_editor_absoluteX="0dp" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/likeLinearLayout"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="@+id/commentLinearLayout"
            app:layout_constraintEnd_toStartOf="@+id/commentLinearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/commentLinearLayout"
            android:focusable="true">

            <TextView
                android:id="@+id/likeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="@dimen/margin_8dp"
                android:drawablePadding="@dimen/padding_4dp"
                android:text="@string/like_text"
                app:drawableStartCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/likeCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/like_count_placeholder" />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/commentLinearLayout"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/promoteLinearLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/likeLinearLayout">

            <TextView
                android:id="@+id/commentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="@dimen/padding_4dp"
                android:text="@string/comment_text"
                app:drawableStartCompat="@drawable/ic_comment" />


            <TextView
                android:id="@+id/commentCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:text="@string/comment_count_placeholder"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/promoteLinearLayout"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/commentLinearLayout"
            app:layout_constraintTop_toTopOf="@+id/commentLinearLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/promoteTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/margin_8dp"
                android:layout_marginTop="@dimen/margin_8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="@dimen/padding_4dp"
                android:text="@string/promote_text"
                app:drawableStartCompat="@drawable/ic_share" />

            <TextView
                android:id="@+id/promoteCountTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_8dp"
                android:text="@string/promote_count_placeholder"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/promoteTextView" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/width_0dp"
            android:layout_height="0.5dp"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/contentImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>