<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.dialog.NewPostBottomSheetDialogFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/postBodyTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_gravity="center"
        app:counterEnabled="true"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_8dp"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_8dp"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_8dp"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:boxBackgroundColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/postBodyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:gravity="start"
            android:textSize="@dimen/text_size_14sp"
            android:hint="@string/say_something_text"
            android:inputType="textMultiLine"
            android:lines="4"
            android:textColor="@color/light_pearl" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/postImageView"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="center"
                android:visibility="gone"
                app:shapeAppearance="@style/CurvedEdgedShapeAppearance"/>

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/addPhotoButton"
                android:textColor="@color/light_pearl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_8dp"
                android:src="@drawable/ic_add_new_photo"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16dp"
                android:background="@drawable/ripple_effect_curved_edges_8dp"
                android:textSize="@dimen/text_size_12sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/locationTextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_12dp"
        app:boxCornerRadiusBottomEnd="@dimen/corner_radius_8dp"
        app:boxCornerRadiusBottomStart="@dimen/corner_radius_8dp"
        app:boxCornerRadiusTopEnd="@dimen/corner_radius_8dp"
        app:boxCornerRadiusTopStart="@dimen/corner_radius_8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginHorizontal="@dimen/margin_16dp"
        app:boxBackgroundColor="@color/white"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:inputType="text"
            android:textSize="@dimen/text_size_14sp"
            android:hint="@string/location_text"
            android:textColor="@color/light_pearl" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/postButton"
        android:textColor="@color/light_pearl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16dp"
        android:layout_marginBottom="@dimen/margin_16dp"
        android:layout_gravity="center_horizontal"
        android:drawableTop="@drawable/ic_save"
        android:padding="@dimen/padding_4dp"
        android:background="@drawable/ripple_effect_curved_edges_8dp"
        android:textSize="@dimen/text_size_12sp"
        android:text="@string/post_text"/>

</LinearLayout>